--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,9 @@
     <head> <link rel="stylesheet" href="../styles.css"></head>
     <body>
         <h1 class = 'recipeheading'>Lasagna Recipe</h1>
-        <img src="lasagna.png" alt="Lasagna">
+        <div class = 'image'>
+            <img src="lasagna.png" alt="Lasagna">
+        </div>
         <div class = 'recipebody'>
             <p>Lasagna is a wide, flat sheet of pasta. 
                 Lasagna can refer to either the type of noodle or 
