--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="../styles.css"></head>
     <body>
         <h1 class = 'recipeheading'>Good Old Fashioned Pancakes</h1>
-        <img src="pancakes.jpg" alt="Old Fashioned Pancakes">
+        <div class = 'image'>
+            <img src="pancakes.jpg" alt="Old Fashioned Pancakes">
+        </div>
         <div class = 'recipebody'>
             <p> A pancake is a thin, flat, circular piece of cooked batter made from milk, flour, and eggs. Pancakes are often rolled up or folded and eaten hot with a sweet or savoury filling inside.</p>
         <ul>
